# cli2

./: .gitignore  16agents-integration-report.html  AI-FAQ.md  BLUELAMP_INSTALLATION_GUIDE.md  BLUELAMP_INSTALL_SUPPORT_AGENT.md  BlueLamp_Implementation_Instructions.md  BlueLamp_Test_Instructions.md  CLAUDE.md  DEBUG_INVESTIGATION_REPORT.md  DEBUG_RECALL_ACTION_INVESTIGATION.md  DELETE_PACKAGE_GUIDE.md  DEPENDENCY_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DISTRIBUTION_GUIDE.md  Dockerfile.linux-build  Dockerfile.standalone  ERROR_INVESTIGATION_REPORT.md  MONITOR_USAGE.md  OpenHands_CLI_Analysis_Report.md  PYPI_TOKEN_SETUP.md  README_BINARY.md  README_PUBLIC.md  RELEASE_GUIDE.md  bash_monitoring_patch.py  bluelamp  bluelamp-alias.sh  bluelamp-fast.spec  bluelamp-linux.spec  bluelamp-lite.spec  bluelamp-windows.spec  bluelamp.spec  bluelamp2  bluelamp2_broken  bluelamp3  bluelamp4  bluelamp_binary_entry.py  bluelamp_optimized.spec  build-linux.sh  build_binary.py  build_binary_simple.sh  (+48 more)
16agents/: 01-requirements-engineer.md  02-uiux-designer.md  03-data-modeling-engineer.md  04-system-architect.md  07-prototype-implementation.md  08-backend-implementation.md  09-test-quality-verification.md  10-api-integration.md  11-debug-detective.md  12-deploy-specialist.md  15-feature-expansion.md  16-refactoring-expert.md  INDEX.md  create-safe-unified-prompt.js  create-unified-prompt.js  fetch-all-prompts.js  safe-unified-16agents-prompt.j2  unified-16agents-prompt.j2
OpenHands-main/: BLUELAMP_AGENT_SYSTEM.md  OpenHands_CLI_Analysis_Report2.md  README-bluelamp.md  bluelamp  config.toml  customize-bluelamp.sh  debug_agents.py  task_greeting.txt
bluelamp-cli/: .env.example  .gitignore  16agents  README.md  package-lock.json  package.json  tsconfig.json
bluelamp-cli-original/: .gitignore  CHANGELOG.md  INSTALL.md  README-diff-system.md  README.md  SCOPE_PROGRESS.md  TEST_GUIDE.md  claude-code-migration-instructions.md  claude-code-system-prompt-analysis.md  claudecode-style-proposal.md  continuous-implementation-guide.md  debug-test.js  demo-simple-ui.sh  dispatch-agent-analysis.md  multiline-fix.md  next-gen-system-prompt.md  project-context-for-ai.md  test-debug-paste.js  test-enhanced-ui.js  test-final-v2.js  test-final.js  test-hybrid.js  test-improved-ui.js  test-multiline-approaches.ts  test-paste-debug.js  test-paste.js  test-perfect-paste.js  test-raw-mode-v2.js  test-raw-mode.js  test-ryt-limits.js  test-simple-claude.js  test-simple-paste.js  test-simple-ui.js  test-simple.js  test-tools.js  test-ui.js  tool-integration-guide.md  tool-test-guide.md  tsconfig.json
cli/: .gitignore  .pypirc  CLAUDE.md  DEBUG_ROADMAP.md  HANGING_ACTIONS_FIX.md  MICROAGENT_CONFIG_REMOVAL_SUMMARY.md  MICROAGENT_REMOVAL_INVESTIGATION.md  README-bluelamp.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  agent_configs.toml  analyze_airdesign_lp.py  bluelamp  bluelamp-browsing  bluelamp-local  browsing_config.toml  browsing_config_docker.toml  check_current_session.py  check_portal_logs.py  check_portal_url.py  chrome_extension_ai_guide_example.js  chrome_extension_demo.html  chrome_visual_analyzer_concept.html  config.toml  debug_config_values.py  emergency_clear_hanging_actions.py  final_integration_test.py  force_clear_hanging_actions.py  inspect_memory_cache.py  install-bluelamp.sh  investigate_hanging_process.py  mongodb_api_key_guide.py  mongodb_guided_cli_demo.py  mongodb_login_test.py  portal_integration.py  pyproject.toml  run_openhands.sh  run_openhands_demo.py  setup-git-hooks.sh  (+16 more)
cli2/: .gitignore  MANIFEST.in  README.md  build.sh  openhands2  pyproject.toml
core/: __init__.py  error_handler.py  exceptions.py  logger.py  loop.py  main.py  setup.py  version.py
docs/: BlueLamp_Agent_System_Architecture.md  BlueLamp_System_Prompt.md  Code_Modification_Agent_Prompt.md  FINISH_TOOL_ENHANCEMENT_PLAN.md  OpenHands_Thread_AsyncIO_Architecture.md  SCOPE_PROGRESS.md  autonomous-orchestrator-implementation-plan.md  bluelamp-16-agents-overview.md  bluelamp-autonomous-multi-agent-proposal.md  bluelamp-cli-openhands-ui-proposal.md  bluelamp-context-management-report.md  bluelamp-current-state-report.md  browser-integration-plan.md  codeact-agent2-implementation-report.md  index.html  install.html  katakana-cli-setup.md  multi-agent-orchestration-mechanism.md  openhands-briefing-document.md  openhands-setup-and-conversation-guide.md  opensource-monetization-patterns.md  orchestrator-ai-architecture.md  promptmapping.txt  requirements.md  (+4 more)
(+1105 files in other folders)
